# M2VIP21-SPR4BranchedDLO

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: Xinit.csv  Xinit_python.csv  test_cloud.pcd  test_cloud_occluded.pcd
python/: CMakeLists.txt
python/examples/: params.ini  plotResultPython.m  spr_branched_example.py  spr_example_default_para.py  spr_example_dict.py  spr_example_np.py  spr_example_read_params.py  spr_example_runtime.py
python/sprpy/: CMakeLists.txt  sprBranched_py.h  spr_py.cpp  spr_py.h
src/: csv_utils.h  gmm.cpp  gmm.h  mlle.cpp  mlle.h  spr.cpp  spr.h  spr_branched.cpp  spr_branched.h
test/: demo.sh  params.ini  plotDemo.m  plotResult_SPR.m  plotResult_SPRBranched.m  spr_test.cpp  sprbranched_test.cpp
